test/spec_vectors/simd_f64x2_rounding/fail/module_20.wat
(module (func (result v128) (f64x2.nearest (i32.const 0))))